# cgio

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/00_init_SDL_window/: main.cpp
src/02_line/: main.cpp
src/ex02/1_points/1_set_pixel/: main.cpp
src/ex02/2_lines/2_dda/: main.cpp
src/ex02/2_lines/3_bresenham/: main.cpp
src/ex02/3_primitives/1_triangle/: main.cpp
src/ex02/3_primitives/2_circle/: main.cpp
src/ex02/3_primitives/3_elipse/: main.cpp
src/ex02/4_drawing/1_house/: main.cpp
src/ex02/4_drawing/2_nato/: main.cpp
src/ex03/1_screen_coodrinates/: main.cpp
src/ex03/2_transform/: main.cpp
src/ex03/3_matrix2D/: main.cpp
src/testgroung/: main.cpp
